// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle basic 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  cursor: pointer;
}

.c4 {
  font-size: 0.8em;
  margin-left: 0;
}

.c2 {
  width: 12px;
  height: 12px;
  margin-top: -6px;
  border-radius: 50%;
  position: absolute;
  top: 50%;
  -webkit-transition: all 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: all 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  left: 3px;
  background-color: #000000;
}

.c1 {
  width: 40px;
  height: 20px;
  border-radius: 20px;
  position: relative;
  border: 2px solid;
  -webkit-transition: all 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: all 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  background-color: transparent;
  border-color: #000000;
}

.c1:active {
  background-color: #dedede;
  border-color: #dedede;
}

.c3 {
  width: 100%;
  height: 100%;
  opacity: 0;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  cursor: pointer;
}

<label
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    />
    <input
      className="c3"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <span
    className="c4"
  />
</label>
`;

exports[`Toggle prop disabled 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  cursor: not-allowed;
}

.c4 {
  font-size: 0.8em;
  margin-left: 0;
}

.c2 {
  width: 12px;
  height: 12px;
  margin-top: -6px;
  border-radius: 50%;
  position: absolute;
  top: 50%;
  -webkit-transition: all 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: all 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  left: 3px;
  background-color: #000000;
  background-color: #b5b5b5;
}

.c1 {
  width: 40px;
  height: 20px;
  border-radius: 20px;
  position: relative;
  border: 2px solid;
  -webkit-transition: all 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: all 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  background-color: transparent;
  border-color: #000000;
  border-color: #dedede;
  pointer-events: none;
}

.c1:active {
  background-color: #dedede;
  border-color: #dedede;
}

.c3 {
  width: 100%;
  height: 100%;
  opacity: 0;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  cursor: not-allowed;
}

<label
  className="c0"
  disabled={true}
>
  <div
    className="c1"
    disabled={true}
  >
    <span
      className="c2"
      disabled={true}
    />
    <input
      className="c3"
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <span
    className="c4"
  />
</label>
`;
